--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:32.0.0') // Ensure you have the latest BOM version
+    implementation 'com.google.firebase:firebase-auth' // Add this line
+}
